modify .gitignore and add a shell file

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 # Core files
 #core
 
+*.zip
+
 #==============================================================================#
 # Explicit files to ignore (only matches one).
 #==============================================================================#
