Project2: pass 20w item to insert

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ m4/lt~obsolete.m4
 #==============================================================================#
 #m4/
 build/
+build2/
 #*.m4
 *.o
 *.lo
